add auth sanctum in swagger
